--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   provider: ^5.0.0
   flutter_riverpod: ^0.14.0+3
   cupertino_icons: ^1.0.2
+  flutter_markdown: ^0.6.2
 
 dev_dependencies:
   flutter_test:
