--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_riverpod: ^0.14.0+3
   cupertino_icons: ^1.0.2
   flutter_markdown: ^0.6.2
+  google_fonts: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -24,3 +25,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
+    - assets/icons/
