--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,19 +9,19 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  cloud_firestore: ^2.2.0
+  cupertino_icons: ^1.0.2
+  firebase_core: ^1.2.0
   flutter:
     sdk: flutter
-  firebase_core: ^1.2.0
-  cloud_firestore: ^2.2.0
-  provider: ^5.0.0
-  flutter_riverpod: ^0.14.0+3
-  cupertino_icons: ^1.0.2
   flutter_markdown: ^0.6.2
   google_fonts: ^2.1.0
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  pedantic_mono: any
 
 flutter:
   uses-material-design: true
